es-derive2-test/tests/ui/errors/empty_idempotency_array.rs
// Error: Empty idempotency and correlation arrays should fail
#[derive(es_derive2::InjectableEvent)]
#[es(idempotency = [], correlation = [])]
pub struct MyEvent {
    pub id: String,
}

fn main() {}
