es-derive2-test/tests/ui/errors/empty_idempotency_array.stderr
error: idempotency array cannot be empty

       Example usage:
         #[derive(InjectableEvent)]
         #[es(awaits = [PaymentResponse], idempotency = ["user.id"], correlation = ["transaction_id"], status = { exists })]
         pub struct PaymentRequested { ... }

 --> tests/ui/errors/empty_idempotency_array.rs:4:1
  |
4 | / pub struct MyEvent {
5 | |     pub id: String,
6 | | }
  | |_^
